Fix windowcontrols misalignement

--- a/gtk/src/default/gtk-4.0/_tweaks.scss
+++ b/gtk/src/default/gtk-4.0/_tweaks.scss
@@ -1,5 +1,7 @@
 // Smaller windowcontrols and orange close button
 windowcontrols {
+    margin-left: 7px; // Fix windowcontrols misalignement caused by smaller windowcontrols
+
     button {
         padding: 2px;
         margin: 0 7px;
